fix: Avoid long result item overflowing

--- a/www/styles.css
+++ b/www/styles.css
@@ -115,6 +115,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	width: fit-content;
+	max-width: 100%;
 	gap: 0.5rem;
 }
 
@@ -124,4 +125,5 @@ body {
 	font-size: 1rem;
 	background: #282828;
 	border-radius: 0.25rem;
+	overflow: auto;
 }
